Working Dockerfile and run.sh, sliming down our fat JAR